 - show who is online somewhere (in User config form?)
 - setup demo site
 - update function.lastvalue to NULL when trigger's status becomes
   UNKNOWN (done?)
 - update trigger status to unknown if cannot evaluate function 
 - do not dump "Expression cannot be evaluated" in case if function.lastvalue
   is NULL
 - get rid of register_globals in php.ini (use $HTTP_GET_VARS, ...)

 TO TEST:

  - validation of trigger expressions in PHP frontend
  - nodata() for trapped parameters
  - everything for PostgreSQL

Changes for 1.0beta6:

 - fixed problem with parsing of trigger expressions. [.-.] changed
 to - (Alexei)
 - support for function nodata() added (Alexei)
 - minimum number of zabbix_suckerd that can be started is 4 (Alexei)
 - simplified function update_triggers(). (Alexei)
 - fixed situation when Service is linked to a trigger. Service name is
   correct now. (Alexei)
 - support for new trigger function: str() (Alexei)
 - changed type of functions.parameter to varchar(255) (Alexei)
 - additional colors for graphs (Alexei)
 - in chart3.php: group by <complex expression> changed to group by 1
 (Alexei)
 - added housekeeping procedure for table sessions (Alexei)
 - changed width=\"X%\" to width=X% in *.php (Alexei)
 - Status of a trigger will blink if it was changes during last 60
 seconds (Alexei)
 - Zabbix daemons to update triggers.lastchange when triggers.values 
 is changed (Alexei)
 - added misc/init.d/debian/zabbix-[suckerd|trapperd] (Alexei)
 - removed misc/init.d/debian/zabbix-server (Alexei)
 - send_email() will timeout after 10 seconds (Alexei)
 - DBadd_alarm() renamed to add_alarm() (Alexei)
 - support for SCO OpenServer (Alexei). Thanks to Alexender Kirhenstein.
 - ./configure will correctly define socklen_t (Alexei) 
 - <center> changed to <div align=center> (Alexei)
 - reason of problem in screen IT Services (Alexei) 
 - added frontends.php/helpdesk.php (Alexei)
 - added tables: problems, problems_comments,categories (Alexei)