@@ -12,15 +12,15 @@
 ?>
 
 <?
-	if(isset($register) && ($register=="update"))
+	if(isset($HTTP_GET_VARS["register"]) && ($HTTP_GET_VARS["register"]=="update"))
 	{
-		$result=update_trigger_comments($triggerid,$comments);
+		$result=update_trigger_comments($HTTP_GET_VARS["triggerid"],$HTTP_GET_VARS["comments"]);
 		show_messages($result,"Trigger comment updated","Cannot update trigger comment");
 	}
 ?>
 
 <?
-	$result=DBselect("select comments from triggers where triggerid=$triggerid");
+	$result=DBselect("select comments from triggers where triggerid=".$HTTP_GET_VARS["triggerid"]);
 	$comments=stripslashes(DBget_field($result,0,0));
 ?>
 
@@ -29,8 +29,8 @@
 	echo "Comments";
 
 	show_table2_v_delimiter();
-	echo "<form method=\"post\" action=\"tr_comments.php\">";
-	echo "<input name=\"triggerid\" type=\"hidden\" value=$triggerid>";
+	echo "<form method=\"get\" action=\"tr_comments.php\">";
+	echo "<input name=\"triggerid\" type=\"hidden\" value=".$HTTP_GET_VARS["triggerid"].">";
 	echo "Comments";
 	show_table2_h_delimiter();
 	echo "<textarea name=\"comments\" cols=100 ROWS=\"25\" wrap=\"soft\">$comments</TEXTAREA>";
